src/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>StrikeForce1__USAddress_Billing_Status_Display__c</fullName>
        <formula>IF ( ISPICKVAL(StrikeForce1__USAddress_Billing_Status__c,&quot;Verified&quot;),
    IMAGE(&quot;/resource/StrikeForce1__CheckMark&quot;,&quot;Verified&quot;),
    IMAGE(&quot;/resource/StrikeForce1__XMark&quot;,&quot;Not Verified&quot;))
&amp; &quot; &quot; &amp;
CASE(StrikeForce1__USAddress_Billing_Status__c,
    &quot;Verified&quot;,&quot;Verified&quot;  &amp; BR() &amp; HYPERLINK(&quot;/apex/StrikeForce1__FieldEditToggleStatus?Id=&quot; &amp; Id &amp; &quot;&amp;MappingName=ContractBilling&quot;,&quot;Mark as Unverified&quot;,&quot;_self&quot;),
    &quot;Not Verified&quot; &amp; BR() &amp; HYPERLINK(&quot;/apex/StrikeForce1__FieldEditToggleStatus?Id=&quot; &amp; Id &amp; &quot;&amp;MappingName=ContractBilling&quot;,&quot;Mark as Verified&quot;,&quot;_self&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StrikeForce1__USAddress_Billing_Status__c</fullName>
        <label>Billing Status (Hidden)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Verified</fullName>
                    <default>true</default>
                    <label>Not Verified</label>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StrikeForce1__USAddress_Billing_Verify__c</fullName>
        <formula>HYPERLINK(&quot;/apex/StrikeForce1__USAddressVerification?id=&quot;&amp;Id&amp;&quot;&amp;MappingName=ContractBilling&quot;,&quot;Verify Address&quot;,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Verification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StrikeForce1__USAddress_Shipping_Status_Display__c</fullName>
        <formula>IF ( ISPICKVAL(StrikeForce1__USAddress_Shipping_Status__c,&quot;Verified&quot;),
    IMAGE(&quot;/resource/StrikeForce1__CheckMark&quot;,&quot;Verified&quot;),
    IMAGE(&quot;/resource/StrikeForce1__XMark&quot;,&quot;Not Verified&quot;))
&amp; &quot; &quot; &amp;
CASE(StrikeForce1__USAddress_Shipping_Status__c,
    &quot;Verified&quot;,&quot;Verified&quot;  &amp; BR() &amp; HYPERLINK(&quot;/apex/StrikeForce1__FieldEditToggleStatus?Id=&quot; &amp; Id &amp; &quot;&amp;MappingName=ContractShipping&quot;,&quot;Mark as Unverified&quot;,&quot;_self&quot;),
    &quot;Not Verified&quot; &amp; BR() &amp; HYPERLINK(&quot;/apex/StrikeForce1__FieldEditToggleStatus?Id=&quot; &amp; Id &amp; &quot;&amp;MappingName=ContractShipping&quot;,&quot;Mark as Verified&quot;,&quot;_self&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StrikeForce1__USAddress_Shipping_Status__c</fullName>
        <label>Shipping Status (Hidden)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Verified</fullName>
                    <default>true</default>
                    <label>Not Verified</label>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StrikeForce1__USAddress_Shipping_Verify__c</fullName>
        <formula>HYPERLINK(&quot;/apex/StrikeForce1__USAddressVerification?id=&quot;&amp;Id&amp;&quot;&amp;MappingName=ContractShipping&quot;,&quot;Verify Address&quot;,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Verification</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllActivatedContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllContracts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllDraftContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllInApprovalContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>All In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyActivatedContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>My Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyDraftContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>My Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyInApprovalContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>My In Approval Contracts</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>